# Deep-Learning-with-C-

./: README.md
chapter5/: cuda_mlp  cuda_mlp.cpp  cuda_mlp.cu  eigen_mlp_xor  eigen_mlp_xor.cpp  libtorch_mlp.cpp  optimizers.cpp
chapter6/: ApplyCombinedTransforms.cpp  BasicConvLayer.cpp  CMakeLists.txt  CudaConvLayer.cu  CudaEigenConvLayer.cu  ImageClassifier.cpp  ImageCropping.cpp  ImageFlip.cpp  ImagePadding.cpp  ImageResampling.cpp  ImageRotation.cpp  ImageScaling.cpp  ImageTranslation.cpp  ImageZoom.cpp  LibTorchConvLayer.cpp  MatrixConvLayer.cpp  UNet.cpp  VGG16.cpp  tempCuda.cu
chapter7/: COMPLETE_GUIDE.md  RNNCell.cpp  RNNCell_libtorch.cpp  RNNCell_simple.cpp  core_matrix_operations.cpp  lstm_libtorch.cpp  lstm_matrix.cpp  lstm_simple.cpp  lstm_translator.cpp  lstm_translator_v1.cpp  matrix_ops.h  rnn_bptt.cpp  rnn_bptt_eigen.cpp  rnn_bptt_gpu.cu  rnn_bptt_libtorch.cpp  rnn_bptt_matrix.cpp  rnn_bptt_valarray.cpp  sample_text.txt  text_file_reader.cpp  text_prediction.cpp  text_prediction_libtorch.cpp  text_preprocessor.cpp  text_utf8_handling.cpp  word_embeddings.cpp  word_embeddings.txt  word_embeddings_eigen.cpp
chapter8/: CMakeLists.txt  autoencoder.cpp  autoregressive_llm.cpp  bleu_calculator.cpp  build.sh  perplexity_calculator.cpp  rouge_calculator.cpp  sampling_methods.cpp  seq2seq_autoencoder.cpp  seq2seq_rnn_autoencoder.cpp  structured_vision_gan.cpp  vae.cpp  vision_gan.cpp
chapter9/: CHAPTER9_GUIDE.md  CMakeLists.txt  README.md  attention.cpp  basic_quantization_functions.cpp  bert_train.cpp  data_loader.cpp  ddp_training.cpp  ddp_transformer.cpp  decoder.cpp  decoder.h  encoder.cpp  encoder.h  fsdp_training.cpp  fsdp_transformer.cpp  gradient_pruning.cpp  int8_matmul_accumulate.cu  iterative_pruning.cpp  knowledge_distillation.cpp  magnitude_pruning.cpp  multihead_attention.cpp  per_channel_quanitzation_transformer.cpp  pipeline_fsdp_training.cpp  positional_encoding.h  post_training_quantization_transformer.cpp  qat_transformers.cpp  rope.cpp  simple_positional_encoding.cpp  torch_attention.cpp  torch_decoder.cpp  torch_encoder.cpp  torch_quantization.cpp  train_decoder.cpp  train_encoder.cpp  train_encoder_decoder.cpp  transformer.cpp  transformer_pruning.cpp  transformer_pruning_pipeline.cpp  wanda_pruning.cpp
